--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdminAplikasiCapstone">
-        <activity android:name=".ui.LoginActivity"></activity>
+        <activity android:name=".ui.DetailPhotoActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".ui.DetailLaporanActivity" />
+        <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".MainActivity" />
         <activity
             android:name=".SplashScreen"
-            android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
