--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdminAplikasiCapstone">
-        <activity android:name=".ui.DetailLaporanSelesaiActivity"></activity>
+        <activity android:name=".ui.DetailMultiplePhotoActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".ui.complete.DetailLaporanSelesai" />
+        <activity android:name=".ui.SubmitLaporanSelesaiActivity" />
         <activity
-            android:name=".ui.DetailPhotoActivity"
+            android:name=".ui.DetailSinglePhotoActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".ui.DetailLaporanActivity" />
-        <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".ui.RegisterActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.regis.RegisterActivity" />
         <activity android:name=".MainActivity" />
         <activity
             android:name=".SplashScreen"
